--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -11,23 +11,26 @@
         android:id="@+id/gifBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#070707"
+        android:backgroundTint="#00BCD4"
         android:scaleType="centerCrop"
         android:src="@drawable/lineas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:srcCompat="@color/black" />
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="259dp"
         android:layout_height="63dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="ELIJA LA OPERACION QUE DESEA REALIZAR"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FBFBFB"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,10 +56,12 @@
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="112dp"
+        android:backgroundTint="#00BCD4"
         android:text="NUMEROS PERFECTOS"
+        app:iconTint="#DFD8D8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btnTrinomio"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,11 +71,12 @@
         android:layout_width="0dp"
         android:layout_height="71dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="664dp"
+        android:layout_marginTop="644dp"
+        android:backgroundTint="#00BCD4"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +86,8 @@
         android:layout_width="0dp"
         android:layout_height="85dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="212dp"
+        android:backgroundTint="#00BCD4"
         android:text="FORMULA GENERAL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -92,6 +99,7 @@
         android:layout_width="197dp"
         android:layout_height="78dp"
         android:layout_marginTop="405dp"
+        android:backgroundTint="#00BCD4"
         android:text="Trapecio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,14 +107,15 @@
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="@+id/button7"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.748" />
+        app:layout_constraintVertical_bias="0.559" />
 
     <Button
         android:id="@+id/btnOperacionesBasicas"
         android:layout_width="188dp"
         android:layout_height="81dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="212dp"
+        android:backgroundTint="#00BCD4"
         android:text="OPERACIONES BASICAS"
         app:layout_constraintEnd_toStartOf="@+id/btnformulageneral"
         app:layout_constraintHorizontal_weight="1"
@@ -117,51 +126,71 @@
         android:id="@+id/btnPitagoras"
         android:layout_width="181dp"
         android:layout_height="77dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#00BCD4"
         android:text="Pitagoras"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="414dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_said"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.553"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="194dp"
         android:layout_height="85dp"
+        android:backgroundTint="#00BCD4"
         android:text="OPERACIONES TRIANGULOS"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="491dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.672"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnNPrimos"
         android:layout_width="184dp"
         android:layout_height="79dp"
+        android:backgroundTint="#00BCD4"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.941"
+        app:layout_constraintHorizontal_bias="0.995"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="@+id/btnPitagoras"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719"
+        app:layout_constraintVertical_bias="0.681"
         tools:ignore="UnknownId" />
 
     <Button
         android:id="@+id/btn_said"
         android:layout_width="191dp"
         android:layout_height="80dp"
-        android:layout_marginTop="404dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#03A9F4"
         android:text="NUMEROS PRIMOS"
+        app:iconTint="@color/teal_200"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.567"
+        app:strokeColor="#00BCD4" />
 
     <Button
         android:id="@+id/btnPentagono"
         android:layout_width="189dp"
         android:layout_height="90dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="576dp"
+        android:layout_marginTop="560dp"
+        android:backgroundTint="#00BCD4"
         android:text="PENTAGONO"
         app:layout_constraintEnd_toStartOf="@+id/btnNPrimos"
         app:layout_constraintHorizontal_bias="0.0"
@@ -174,30 +203,35 @@
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="144dp"
+        android:backgroundTint="#00BCD4"
         android:text="Trinomio-Monomio"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.162"
+        app:strokeColor="#00BCD4" />
 
     <Button
         android:id="@+id/btnJefersonY"
         android:layout_width="0dp"
         android:layout_height="89dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="292dp"
+        android:backgroundTint="#00BCD4"
         android:text="Operacion Factorial"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/btnExponenciales"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnExponenciales"
         android:layout_width="0dp"
         android:layout_height="86dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="320dp"
-        android:text="Button"
+        android:layout_marginTop="296dp"
+        android:backgroundTint="#00BCD4"
+        android:text="Exponenciales"
         app:layout_constraintEnd_toStartOf="@+id/btnJefersonY"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
