--- a/app/src/main/res/layout/activity_fibonacci.xml
+++ b/app/src/main/res/layout/activity_fibonacci.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spiderman"
+    android:background="@color/black"
     tools:context=".FibonacciActivity">
 
     <EditText
@@ -16,6 +16,7 @@
         android:ems="10"
         android:inputType="numberSigned"
         android:text="..."
+        android:textColor="#FBFAFA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -25,6 +26,7 @@
         android:layout_height="63dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="456dp"
+        android:backgroundTint="#00BCD4"
         android:text="CALCULAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -34,6 +36,7 @@
         android:layout_height="421dp"
         android:layout_marginEnd="84dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="#FBFAFA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -57,7 +60,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="636dp"
         android:text="FIBONACCI"
-        android:textColor="@color/design_default_color_error"
+        android:textColor="@color/design_default_color_background"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,6 +72,7 @@
         android:layout_height="59dp"
         android:layout_marginEnd="280dp"
         android:layout_marginBottom="640dp"
+        android:backgroundTint="#00BCD4"
         android:onClick="regresarfib"
         android:text="REGRESAR"
         app:layout_constraintBottom_toBottomOf="parent"
