--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -5,7 +5,7 @@
     android:id="@+id/btnregresar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/implementos_escritura_naranja_pizarra"
+    android:background="@color/black"
     tools:context=".FormulaGeneral"
     tools:layout_editor_absoluteX="2dp"
     tools:layout_editor_absoluteY="57dp">
@@ -44,7 +44,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="616dp"
-        android:background="#673AB7"
+        android:background="#00BCD4"
         android:text="RESULTADO POSITIVO :"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
@@ -58,7 +58,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="216dp"
         android:layout_marginTop="616dp"
-        android:background="#673AB7"
+        android:background="#00BCD4"
         android:text="RESULTADO NEGATIVO :"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
@@ -184,7 +184,7 @@
         android:text="CALCULAR"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="#722EEC"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -194,6 +194,7 @@
         android:layout_height="53dp"
         android:layout_marginStart="152dp"
         android:layout_marginBottom="160dp"
+        android:backgroundTint="#00BCD4"
         android:text="REGRESAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
