--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0E0E0E"
+    android:foregroundTint="#0C0C0C"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,6 +14,7 @@
         android:layout_height="83dp"
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="252dp"
+        android:textColor="#F8F7F7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -24,7 +27,7 @@
         android:background="#D6C0FD"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#100F0F"
+        android:textColor="#FDFCFC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="C" />
@@ -37,7 +40,7 @@
         android:layout_marginEnd="72dp"
         android:text="TEOREMA DE PITAGORAS"
         android:textAlignment="center"
-        android:textColor="#121212"
+        android:textColor="#FBFAFA"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +55,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado A"
         android:textAlignment="center"
-        android:textColor="#171616"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toStartOf="@+id/txtladoA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -67,7 +70,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado B"
         android:textAlignment="center"
-        android:textColor="#121111"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toStartOf="@+id/txtladoB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -82,7 +85,7 @@
         android:layout_marginEnd="24dp"
         android:text="Ingrese  Lado C"
         android:textAlignment="center"
-        android:textColor="#131313"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toStartOf="@+id/txtladoC"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -98,7 +101,7 @@
         android:ems="10"
         android:inputType="text"
         android:shadowColor="#F1EBEB"
-        android:textColor="#0B0B0B"
+        android:textColor="#FDFCFC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="A" />
@@ -112,7 +115,7 @@
         android:background="#D6C0FD"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#171616"
+        android:textColor="#FDFCFC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="B" />
@@ -125,7 +128,7 @@
         android:layout_marginBottom="108dp"
         android:onClick="calcula"
         android:text="CALCULAR"
-        app:backgroundTint="#571818"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -135,7 +138,7 @@
         android:layout_height="wrap_content"
         android:onClick="regresar"
         android:text="REGRESAR"
-        app:backgroundTint="#972828"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
