--- a/app/src/main/res/layout/activity_teorema_pitagoras.xml
+++ b/app/src/main/res/layout/activity_teorema_pitagoras.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E7F4FA"
+    android:background="#090909"
     android:onClick="calcula"
     tools:context=".teoremaPitagoras">
 
@@ -17,7 +17,7 @@
         android:background="#D6C0FD"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#100F0F"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="C" />
@@ -30,7 +30,7 @@
         android:layout_marginEnd="84dp"
         android:text="TEOREMA DE PITAGORAS"
         android:textAlignment="center"
-        android:textColor="#121212"
+        android:textColor="#FDFDFD"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado A"
         android:textAlignment="center"
-        android:textColor="#171616"
+        android:textColor="#FAF6F6"
         app:layout_constraintEnd_toStartOf="@+id/txtladoA"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +56,7 @@
         android:layout_marginEnd="28dp"
         android:text="Ingrese  Lado B"
         android:textAlignment="center"
-        android:textColor="#121111"
+        android:textColor="#FAF6F6"
         app:layout_constraintEnd_toStartOf="@+id/txtladoB"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,7 +68,7 @@
         android:layout_marginEnd="24dp"
         android:text="Ingrese  Lado C"
         android:textAlignment="center"
-        android:textColor="#131313"
+        android:textColor="#FAF6F6"
         app:layout_constraintEnd_toStartOf="@+id/txtladoC"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,7 +82,7 @@
         android:ems="10"
         android:inputType="text"
         android:shadowColor="#F1EBEB"
-        android:textColor="#0B0B0B"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="A" />
@@ -96,7 +96,7 @@
         android:background="#D6C0FD"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#171616"
+        android:textColor="#FBFAFA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="B" />
@@ -110,8 +110,8 @@
         android:onClick="calcula"
         android:text="CALCULAR"
         android:textAlignment="center"
-        android:textColor="#1B1919"
-        app:backgroundTint="#CFB1B1"
+        android:textColor="#FBF9F9"
+        app:backgroundTint="#00BCD4"
         app:iconTint="#FFF6F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -122,6 +122,7 @@
         android:layout_height="43dp"
         android:layout_marginEnd="172dp"
         android:layout_marginBottom="260dp"
+        android:textColor="#FDFCFC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
