--- a/app/src/main/res/layout/activity_trapecio.xml
+++ b/app/src/main/res/layout/activity_trapecio.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0E0E0E"
     tools:context=".TrapecioActivity"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="16dp">
@@ -14,6 +15,7 @@
         android:layout_height="58dp"
         android:text="Area y perímetro de un trapecio "
         android:textAlignment="center"
+        android:textColor="#F8F5F5"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +28,7 @@
         android:id="@+id/btnAreaTrapecio"
         android:layout_width="135dp"
         android:layout_height="48dp"
+        android:backgroundTint="#00BCD4"
         android:onClick="calcularArea"
         android:text="AREA"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +42,7 @@
         android:id="@+id/btnPerimetroTrapecio"
         android:layout_width="137dp"
         android:layout_height="52dp"
+        android:backgroundTint="#00BCD4"
         android:onClick="calcularPerimetro"
         android:text="PERÍMETRO"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +60,7 @@
         android:layout_marginBottom="256dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FBFBFB"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +72,7 @@
         android:layout_height="23dp"
         android:text="Altura:"
         android:textAlignment="center"
+        android:textColor="#FBFBFB"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +89,7 @@
         android:layout_marginBottom="188dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FBFAFA"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +103,7 @@
         android:layout_marginBottom="124dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FDFBFB"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Area ="
+        android:textColor="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -118,6 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Resultado"
+        android:textColor="#FDFCFC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.341"
@@ -130,6 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Resultado"
+        android:textColor="#FAF9F9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.887"
@@ -142,6 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Perimetro ="
+        android:textColor="#F8F8F8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.097"
@@ -155,6 +167,7 @@
         android:layout_height="24dp"
         android:text="Base Menor:"
         android:textAlignment="center"
+        android:textColor="#FDFCFC"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,6 +182,7 @@
         android:layout_height="19dp"
         android:text="Base Mayor:"
         android:textAlignment="center"
+        android:textColor="#FDFBFB"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,10 +197,10 @@
         android:layout_height="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.541"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.258"
+        app:layout_constraintVertical_bias="0.231"
         app:srcCompat="@drawable/trapimg" />
 
     <EditText
@@ -195,6 +209,7 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FBF9F9"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -210,6 +225,7 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -225,6 +241,7 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF6F6"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -240,13 +257,14 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FBFAFA"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintHorizontal_bias="0.953"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.289"
+        app:layout_constraintVertical_bias="0.288"
         tools:text="@string/txtB" />
 
     <Button
@@ -255,7 +273,7 @@
         android:layout_height="wrap_content"
         android:onClick="volver"
         android:text="Volver"
-        app:backgroundTint="#3DDB83"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
