--- a/app/src/main/res/layout/activity_comprobacion_de_primos.xml
+++ b/app/src/main/res/layout/activity_comprobacion_de_primos.xml
@@ -23,14 +23,15 @@
 
     <EditText
         android:id="@+id/txtNumero"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="291dp"
+        android:layout_height="75dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="531dp"
+        android:layout_marginEnd="59dp"
+        android:layout_marginBottom="517dp"
         android:ems="10"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/button"
